# swagger/swagger.json
@@ -99,9 +99,43 @@
                     }
                 }
             }
+        },
+        "/reset-Password": {
+            "put": {
+                "tags": [
+                    " resetPassword"
+                ],
+                "Summarry": "reset password",
+                "parameters": [
+                    {
+                        "name": "resetPassword",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/resetPassword"
+                        }
+                    },
+                    {
+                        "name": "token",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful"
+                    },
+                    "401": {
+                        "description": "Unauthorized User"
+                    },
+                    "500": {
+                        "description": "Internal Error"
+                    }
+                }
+            }
         }
         
+        
     },
+
     
     
     "definitions": {
@@ -139,6 +173,17 @@
             "type": "object",
             "properties": {
                 "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "resetPassword": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
